Thu Sep 17 19:06:47 PDT 1998 Manish Singh <yosh@gimp.org>

	* install-sh
	* missing
	* mkinstalldirs: updated to latest automake version

1998-09-17  Raja R Harinath  <harinath@cs.umn.edu>

	* gtk/Makefile.am (source_headers): Move `gtkfeature.h' ...
	(gtkinclude_HEADERS): ... here.
	(gtk.defs): Pass `g' flag to sed, to replace all occurances.

Thu Sep 17 10:49:51 1998  Raph Levien  <raph@gimp.org>

	* HACKING: added GNU indent, as it is now required to successfully
	build gtk+. Should this be detected in autoconf, possibly?

Tue Sep 15 14:57:30 1998  Owen Taylor  <otaylor@redhat.com>

	* Makefile.am gtk-config.in l*: Update to libtool-1.2b,
	change library versioning scheme to drop LT_RELEASE
	from the -l line, while keeping it in the soname.

Tue Sep 15 14:10:33 1998  Owen Taylor  <otaylor@redhat.com>

	* configure.in Makefile.in: define a MAINT-like variable REBUILD
	which is set if Perl and awk are found, and autogenerated sources
	can be rebuilt. Remove the auto-generated sources from
	CVS. 

	Add dependencies so that the autogenerated sources are 
	rebuilt if the files they depend on change. 
	(This unfortunately currently results in the entire
	gtk/ directory being rebuilt when any header changes.
	Moving all enums to gtkenums.h would fix this.)

Thu Sep 17 05:12:48 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkobject.h: added gtk_object_set_data_destroy and
	gtk_object_set_data_destroy_by_id functions to set the destroy
	function pointer for an existing data portion.

	* gtk/gtkobject.c: removed the GtkObjectData implementation and
	made all gtk_object_*data* functions use the GLib equivalents.

1998-09-16  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gtk/gtktoolbar.c (gtk_toolbar_insert_element): Test whether type
	is not equal to GTK_TOOLBAR_CHILD_RADIOBUTTON before checking that
	(widget != NULL), otherwise radio button insertion will not work
	-- the widget argument is NULL for the first radio button in the
	group.
