@@ -1,7 +1,7 @@
 ;; generated by makeenums.pl  ; -*- scheme -*-
 
 
-; enumerations from "gtkclist.h"
+; enumerations from "./gtkclist.h"
 
 (define-enum GtkCellType
    (empty GTK_CELL_EMPTY)
@@ -10,7 +10,7 @@
    (pixtext GTK_CELL_PIXTEXT)
    (widget GTK_CELL_WIDGET))
 
-; enumerations from "gtkctree.h"
+; enumerations from "./gtkctree.h"
 
 (define-enum GtkCTreePos
    (before GTK_CTREE_POS_BEFORE)
@@ -31,14 +31,14 @@
    (toggle GTK_CTREE_EXPANSION_TOGGLE)
    (toggle-recursive GTK_CTREE_EXPANSION_TOGGLE_RECURSIVE))
 
-; enumerations from "gtkdebug.h"
+; enumerations from "./gtkdebug.h"
 
 (define-flags GtkDebugFlag
    (objects GTK_DEBUG_OBJECTS)
    (misc GTK_DEBUG_MISC)
    (signals GTK_DEBUG_SIGNALS))
 
-; enumerations from "gtkenums.h"
+; enumerations from "./gtkenums.h"
 
 (define-flags GtkAccelFlags
    (visible GTK_ACCEL_VISIBLE)
@@ -231,13 +231,13 @@
    (ascending GTK_SORT_ASCENDING)
    (descending GTK_SORT_DESCENDING))
 
-; enumerations from "gtkfontsel.h"
+; enumerations from "./gtkfontsel.h"
 
 (define-enum GtkFontMetricType
    (ixels-metric PIXELS_METRIC)
    (oints-metric POINTS_METRIC))
 
-; enumerations from "gtkobject.h"
+; enumerations from "./gtkobject.h"
 
 (define-flags GtkObjectFlags
    (destroyed GTK_DESTROYED)
@@ -254,7 +254,7 @@
    (mask GTK_ARG_MASK)
    (readwrite GTK_ARG_READWRITE))
 
-; enumerations from "gtkpacker.h"
+; enumerations from "./gtkpacker.h"
 
 (define-flags GtkPackerOptions
    (expand GTK_PACK_EXPAND)
@@ -286,7 +286,7 @@
    (w GTK_ANCHOR_W)
    (e GTK_ANCHOR_E))
 
-; enumerations from "gtkprivate.h"
+; enumerations from "./gtkprivate.h"
 
 (define-flags GtkPrivateFlags
    (user-style PRIVATE_GTK_USER_STYLE)
@@ -297,7 +297,7 @@
    (has-shape-mask PRIVATE_GTK_HAS_SHAPE_MASK)
    (in-reparent PRIVATE_GTK_IN_REPARENT))
 
-; enumerations from "gtkprogressbar.h"
+; enumerations from "./gtkprogressbar.h"
 
 (define-enum GtkProgressBarStyle
    (continuous GTK_PROGRESS_CONTINUOUS)
@@ -309,7 +309,7 @@
    (bottom-to-top GTK_PROGRESS_BOTTOM_TO_TOP)
    (top-to-bottom GTK_PROGRESS_TOP_TO_BOTTOM))
 
-; enumerations from "gtkrc.h"
+; enumerations from "./gtkrc.h"
 
 (define-enum GtkRcTokenType
    (invalid GTK_RC_TOKEN_INVALID)
@@ -340,7 +340,7 @@
    (highest GTK_RC_TOKEN_HIGHEST)
    (last GTK_RC_TOKEN_LAST))
 
-; enumerations from "gtkspinbutton.h"
+; enumerations from "./gtkspinbutton.h"
 
 (define-enum GtkSpinButtonUpdatePolicy
    (always GTK_UPDATE_ALWAYS)
@@ -355,7 +355,7 @@
    (end GTK_SPIN_END)
    (user-defined GTK_SPIN_USER_DEFINED))
 
-; enumerations from "gtktoolbar.h"
+; enumerations from "./gtktoolbar.h"
 
 (define-enum GtkToolbarChildType
    (space GTK_TOOLBAR_CHILD_SPACE)
@@ -364,13 +364,13 @@
    (radiobutton GTK_TOOLBAR_CHILD_RADIOBUTTON)
    (widget GTK_TOOLBAR_CHILD_WIDGET))
 
-; enumerations from "gtktree.h"
+; enumerations from "./gtktree.h"
 
 (define-enum GtkTreeViewMode
    (line GTK_TREE_VIEW_LINE)
    (item GTK_TREE_VIEW_ITEM))
 
-; enumerations from "gtktypeutils.h"
+; enumerations from "./gtktypeutils.h"
 
 (define-enum GtkFundamentalType
    (invalid GTK_TYPE_INVALID)
@@ -396,7 +396,7 @@
    (foreign GTK_TYPE_FOREIGN)
    (object GTK_TYPE_OBJECT))
 
-; enumerations from "gtkwidget.h"
+; enumerations from "./gtkwidget.h"
 
 (define-flags GtkWidgetFlags
    (toplevel GTK_TOPLEVEL)
